# AgriPico

./: AgriPico.c  CMakeLists.txt  README.md
